Fix gateway, add x-uid for room auth and register (not full), fix ports of services and migrations